* fixed issue #3651: Engage Talent Icons image are not properly aligned (IE11)

--- a/src/projects/create/components/SelectProjectTemplateCard.scss
+++ b/src/projects/create/components/SelectProjectTemplateCard.scss
@@ -120,13 +120,15 @@
   @media screen and (max-width: $screen-md - 1px) {
     flex-direction: column;
     text-align: center;
-    height: 100%;
     padding-bottom: 10px;
     flex-basis: 100%;
+    -ms-flex: none;
+    width: 100%;
 
     .left-card-content {
       align-items: center;
       width: 100%;
+      -ms-flex: none;
     }
 
     .icon-wrapper {
@@ -173,6 +175,7 @@
 
   @media screen and (max-width: $screen-sm - 1px) {
     flex-direction: column;
+    -ms-flex-wrap: nowrap;
 
     .right-card {
       justify-content: center;
@@ -186,7 +189,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  min-height: 100%;
   flex-shrink: 0;
 
   .vertical-space {
@@ -206,7 +208,6 @@
   svg {
     float: right;
     background: #f4f4f4;
-    width: auto;
     height: 100%;
   }
 
